<resources>
    <string name="app_title">냉장고+</string>
    <string name="app_short_title">냉장고</string>
    <string name="app_slogan">세상에서 가장 쉬운 냉장고 관리.</string>
    <string name="app_backbtn_description">뒤로 가기</string>
    <string name="app_api_error">API 서비스에 문제가 있습니다.</string>
    <string name="app_api_request_error">서버 요청 실패</string>
    <string name="app_no_credential_error">먼저 시스템에서 Google 계정에 로그인 하십시오.</string>
    <string name="app_unknown_login_error">알 수 없는 오류로 인해 로그인 할 수 없습니다.</string>
    <string name="app_get_categories_error">카테고리 카탈로그 가져오기 실패</string>
    <string name="app_get_items_error">아이템 목록 가져오기 실패</string>
    <string name="app_insight_error">죄송합니다. 지금은 AI 레시피 추천을 사용 할 수 없습니다.</string>
    <string name="app_insight_no_items_error">냉장고가 비었기 때문에 AI 레시피 추천을 사용 할 수 없습니다.</string>
    <string name="app_cannot_be_undone">이 작업은 되돌릴 수 없습니다.</string>
    <string name="app_signout_message">정말로 로그아웃 하시겠습니까?</string>
    <string name="app_confirm">확인</string>
    <string name="app_cancel">취소</string>
    <string name="app_ai_wait_for_response">분석 중</string>

    <string name="login_title">로그인으로 계속하기</string>
    <string name="login_tos"><u>사용 약관 및 개인정보보호정책</u></string>
    <string name="login_btn_description">Sign In with Google</string>
    <string name="login_unknown_error">알 수 없는 이유로 로그인 할 수 없습니다.</string>
    <string name="login_no_account_error">먼저 시스템에서 Google 계정에 로그인 해야 합니다.</string>

    <string name="tos_title">사용 약관 및 개인정보보호정책</string>
    <string name="tos_warning">소프트웨어를 설치하거나 사용하기 전에 본 계약을 자세히 읽어야 합니다.</string>
    <string name="tos_body"><b>사용 약관</b>\n\n이 최종 사용자 사용권 계약 (EULA)는 사용자와 클라우드인터렉티브 사이의 법적 구속력이 있는 계약입니다. 사용자는 이 서비스를 사용하는 것으로 이 계약에 동의한 것으로 간주됩니다. 반드시 서비스를 사용하기 전에 이 계약을 자세히 읽으십시오.\n\n본 앱은 사용자가 냉장고에 보관 중인 신선식품의 유효 기간을 추적하고 신선도 유지에 도움이 되는 다양한 관리 기능을 제공합니다.\n\n본 앱에서 제공되는 유효 기간 추천 및 관련 기능은 일반적인 권장 사항에 기반한 정보이며, 실제 신선도나 유효성을 보장하지 않습니다. 사용자는 각 신선식품의 상태를 개별적으로 확인하고, 본 앱에서 제공된 정보를 참고 자료로만 활용해야 합니다. 서비스 제공자는 본 정보로 인한 결과에 대해 책임지지 않습니다.\n\n서비스 제공자는 언제든지 기능을 수정하거나 서비스의 일부 또는 전체를 중단할 수 있는 권한을 가집니다. 서비스가 변경되거나 중단됨에 따라 발생할 수 있는 데이터 손실이나 불편에 대해서는 책임지지 않습니다.
        \n\n<b>생성형 AI 면책 조항</b>\n\n이 소프트웨어에 포함된 생성형 AI 기능은 사용자에게 유용한 정보를 제공하기 위해 설계되었으나, 생성형 AI가 생성한 결과는 항상 정확하거나 완전하지 않을 수 있습니다. 따라서 반드시 결정을 내리거나 작업을 수행하기 전에 중요한 정보를 확인하십시오. 또한 생명, 건강, 재산등에 중대한 위험이 발생할 수 있는 작업이나 상황에서 생성형 AI 기능을 사용하도록 설계되지 않았습니다.\n\n생성형 AI 기능은 제 3자 서비스 제공자의 기술을 사용합니다. (Microsoft, OpenAI) 이를 위해 일부 데이터가 해당 서비스 제공자에서 전송되어 처리됩니다. AI 기능 제공 목적에 한정된 최소한의 데이터만 전송되며, 관련 데이터 보호 정책은 해당 서비스 제공자의 약관을 참조하십시오.
        \n\n<b>개인정보보호정책</b>\n\n본 앱은 신선식품 관리 기능을 제공하기 위해 Google 식별자 등 최소한의 개인정보를 수집합니다. 수집된 정보는 서비스 제공을 위한 목적으로만 사용되며, 사용자의 동의 없이 용도 외 목적으로 사용되지 않습니다.\n\n본 서비스에서 수집된 개인정보는 클라우드인터렉티브가 위탁하여 관리합니다. 클라우드인터렉티브는 해당 정보를 본 앱의 기능 제공을 위해서만 사용하며, 위탁된 개인정보는 보안을 유지한 상태로 관리됩니다.\n\n클라우드인터렉티브는 사용자의 개인정보 보호를 위해 기술적·관리적 보호 조치를 이행하며, 사용자의 개인정보가 안전하게 보호되도록 최선을 다하고 있습니다.\n\n개인정보는 서비스 이용 기간 동안에만 보유되며, 서비스 이용 중단 또는 해지 요청 시, 수집된 개인정보는 안전하게 파기됩니다.
    </string>

    <string name="about_title">정보</string>
    <string name="about_copyright"><b>이 소프트웨어는 오픈소스 프로젝트의 일부입니다:</b>\nCoppermine-SP/fridgeplus_server</string>

    <string name="item_action_description">항목 옵션</string>
    <string name="additems_title">새 식품 추가하기</string>
    <string name="additems_import">영수증 불러오기</string>
    <string name="additems_help">향상된 AI 영수증 인식을 사용해보세요.</string>
    <string name="additems_category_request_error">카테고리 정보 요청 실패</string>
    <string name="additems_import_request_error">영수증 가져오기 요청 실패</string>
    <string name="additems_add">새 레코드</string>
    <string name="additems_submit">완료</string>
    <string name="additems_empty">항목 없음</string>
    <string name="additems_action_dialog_title">항목 수정 및 삭제</string>
    <string name="additems_import_dialog_title">영수증 불러오기</string>
    <string name="additems_datepicker_dialog_title">유효기간 선택</string>
    <string name="additems_import_dialog_message">사진을 찍거나 갤러리에서 선택하세요.</string>
    <string name="additems_add_dialog_title">항목 추가</string>
    <string name="additems_delete_action">삭제</string>
    <string name="additems_add_action">추가</string>
    <string name="additems_modify_action">수정</string>
    <string name="additems_cancel_action">취소</string>
    <string name="additems_take_picture_action">사진 찍기</string>
    <string name="additems_select_from_gallery_action">겔러리에서 선택</string>
    <string name="additems_import_error">영수증 불러오기 실패</string>

    <string name="item_name">이름</string>
    <string name="item_quantity">수량</string>
    <string name="item_category">분류</string>
    <string name="item_created">생성일</string>
    <string name="item_expires">유효 기한</string>
    <string name="item_status_expired">만료</string>
    <string name="item_status_last_day">내일 만료</string>
    <string name="item_status_days_left">%d일 남음</string>
    <string name="item_detail_dialog_title">항목 자세히 보기</string>
    <string name="item_delete_dialog_title">항목 삭제</string>

    <string name="action_menu">옵션</string>
    <string name="action_tos">사용 약관 및 개인정보보호정책</string>
    <string name="action_about">정보</string>
    <string name="action_signout">로그아웃</string>
    <string name="action_additems">식품 추가</string>
    <string name="action_reset">냉장고 초기화</string>
    <string name="action_ai_recipe">레시피 추천</string>

    <string name="main_title">나의 냉장고</string>
    <string name="main_view_items">식품 보기</string>
    <string name="main_actions">동작</string>
    <string name="main_my_fridge">식품 목록</string>
    <string name="main_items">%d개의 식품이 냉장고에 있습니다.</string>
    <string name="main_no_items">냉장고가 비었습니다.</string>
    <string name="main_summation_ok">모든 식품이 안전합니다.</string>
    <string name="main_summation_attention_required">주의가 필요한 식품이 있습니다.</string>
    <string name="main_summation_expired">만료된 식품이 있습니다.</string>

    <string name="recipe_title">레시피 추천</string>
    <string name="recipe_steps">단계</string>
    <string name="recipe_message">AI는 실수 할 수 있습니다. 중요한 정보를 확인하세요.</string>
</resources>