<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText"
    tools:context=".Activities.TosActivity">
    <com.ref.project.Views.TitleBar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tosTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/tos_title"/>

    <com.ref.project.Views.InfoCard
        android:id="@+id/tosWarning"
        app:layout_constraintTop_toBottomOf="@id/tosTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="3dp"
        app:infoCardIcon="@drawable/warning_icon"
        app:infoCardContent="@string/tos_warning"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tosWarning"
        android:id="@+id/tosBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:text="@string/tos_body"
        android:textFontWeight="400"
        android:fontFamily="@font/pretendard"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="3dp"
        tools:ignore="VisualLintLongText" />

</androidx.constraintlayout.widget.ConstraintLayout>