<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutActivity"
    tools:ignore="HardcodedText">

    <com.ref.project.Views.TitleBar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/aboutTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_title"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibmflexsans"
        android:text="@string/app_short_title"
        android:textFontWeight="900"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard"
        android:text="냉장고+는 클라우드인터렉티브가 ❤️을 담아 만듭니다."
        android:textColor="@color/disabled"
        android:textFontWeight="700"
        android:layout_marginTop="-20dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard"
        android:text="Copyright (C) 2024-2025 Coppermine-SP."
        android:textColor="@color/disabled"
        android:textFontWeight="600"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="-60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <com.ref.project.Views.InfoCard
        android:id="@+id/aboutRepositoryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:infoCardContent="@string/about_copyright"
        app:infoCardIcon="@drawable/github_icon"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>