<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibmflexsans"
            android:text="@string/app_short_title"
            android:textFontWeight="900"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginBottom="-20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <Button
            android:id="@+id/mainMenuBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_menu"
            android:drawableEnd="@drawable/menu_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainSummationArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/mainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard"
            android:text="@string/main_title"
            android:textColor="@color/main_title"
            android:textFontWeight="300"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainSummationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard"
            android:textFontWeight="700"
            android:textSize="18sp"
            android:text="@string/main_summation_no_items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitleText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.ref.project.Views.InfoCard
        android:id="@+id/mainInfoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:elevation="10dp"
        app:infoCardContent="주의가 필요한 식품이 있습니다."
        app:infoCardIcon="@drawable/warning_icon"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addItemsActionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@drawable/main_additems_action_btn_background"
        android:drawableEnd="@drawable/add_icon"
        android:drawablePadding="5dp"
        android:fontFamily="@font/pretendard"
        android:minHeight="30dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/action_additems"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/aiRecipeActionBtn"
        app:layout_constraintBottom_toTopOf="@+id/mainInfoCard"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aiRecipeActionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/additems_import_btn_background"
        android:drawableEnd="@drawable/stars_icon"
        android:drawablePadding="5dp"
        android:fontFamily="@font/pretendard"
        android:minHeight="30dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/action_ai_recipe"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainInfoCard"
        tools:ignore="TouchTargetSizeCheck"/>


</androidx.constraintlayout.widget.ConstraintLayout>
